--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-.settings/
-target/
-.project
-.classpath
+*.settings/
+*target/
+*.project
+*.classpath
 *.class
-build/
-.factorypath
-.apt_generated/
-.metadata
-script-create.ddl
-script-drop.ddl
-.~lock*
+*build/
+*.factorypath
+*.apt_generated/
+*.metadata
+*.~lock*
