--- a/formation-spring-parent/formation-spring-web/pom.xml
+++ b/formation-spring-parent/formation-spring-web/pom.xml
@@ -17,10 +17,9 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+    	<groupId>fr.insee</groupId>
+    	<artifactId>formation-spring-core</artifactId>
+    	<version>1.0</version>
     </dependency>
   </dependencies>
 </project>
