--- a/formation-spring-parent/pom.xml
+++ b/formation-spring-parent/pom.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>fr.insee</groupId>
-  <artifactId>spring-formation-parent</artifactId>
-  <version>1.0</version>
-  <packaging>pom</packaging>
+	<groupId>fr.insee</groupId>
+	<artifactId>spring-formation-parent</artifactId>
+	<version>1.0</version>
+	<packaging>pom</packaging>
 
-  <modules>
-    <module>formation-spring-core</module>
-    <module>formation-spring-web</module>
-    <module>formation-spring-batch</module>
-  </modules>
-  
-  	<properties>
+	<modules>
+		<module>formation-spring-core</module>
+		<module>formation-spring-web</module>
+		<module>formation-spring-batch</module>
+		<module>formation-spring-configuration</module>
+	</modules>
+
+	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<project.java.version>11</project.java.version>
 		<maven.compiler.target>11</maven.compiler.target>
 		<maven.compiler.source>11</maven.compiler.source>
 		<slf4j.version>1.7.25</slf4j.version>
-		<log4j.version>1.2.17</log4j.version>
+		<log4j.version>2.10.0</log4j.version>
 		<junit.version>4.12</junit.version>
 		<jaxb.version>2.3.0</jaxb.version>
 		<insee-config.version>2.4.4</insee-config.version>
@@ -31,15 +32,19 @@
 		<jaxb-api.version>2.3.1</jaxb-api.version>
 		<javax-annotation.version>1.3.2</javax-annotation.version>
 	</properties>
-	
-		<dependencies>
+
+	<dependencies>
 
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -100,5 +105,5 @@
 			<version>${javax-annotation.version}</version>
 		</dependency>
 	</dependencies>
-  
+
 </project>
