--- a/formation-spring-parent/formation-spring-core/pom.xml
+++ b/formation-spring-parent/formation-spring-core/pom.xml
@@ -16,5 +16,11 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
+
+  <dependency>
+  	<groupId>fr.insee</groupId>
+  	<artifactId>formation-spring-configuration</artifactId>
+  	<version>1.0</version>
+  </dependency>
   </dependencies>
 </project>
