Mise en place connexion et test dans le main

--- a/formation-spring-parent/formation-spring-core/src/main/resources/fr/insee/config/database.properties
+++ b/formation-spring-parent/formation-spring-core/src/main/resources/fr/insee/config/database.properties
@@ -8,9 +8,9 @@
 # ------------------------------------------------------------------------
 fr.insee.database.database_pool.driverClassName=org.postgresql.Driver
 
-fr.insee.database.harmonica_dev_postgresql.url=jdbc:postgresql://localhost:5432/spring_formation_bdd
-fr.insee.database.harmonica_dev_postgresql.username=postgres
-fr.insee.database.harmonica_dev_postgresql.password=
+fr.insee.database.database_pool.url=jdbc:postgresql://localhost:5432/spring_formation_bdd
+fr.insee.database.database_pool.username=postgres
+fr.insee.database.database_pool.password=
 
 fr.insee.database.database_pool.defaultAutoCommit=false
 fr.insee.database.database_pool.initialSize=1
