--- a/formation-spring-parent/formation-spring-batch/pom.xml
+++ b/formation-spring-parent/formation-spring-batch/pom.xml
@@ -6,9 +6,7 @@
 		<artifactId>spring-formation-parent</artifactId>
 		<version>1.0</version>
 	</parent>
-	<groupId>fr.insee</groupId>
 	<artifactId>formation-spring-batch</artifactId>
-	<version>1.0</version>
 	<name>formation-spring-batch</name>
 	<url>http://maven.apache.org</url>
 	<properties>
@@ -19,6 +17,11 @@
 			<groupId>fr.insee</groupId>
 			<artifactId>formation-spring-core</artifactId>
 			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
