--- a/formation-spring-parent/formation-spring-configuration/pom.xml
+++ b/formation-spring-parent/formation-spring-configuration/pom.xml
@@ -1,116 +1,38 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>fr.insee</groupId>
 		<artifactId>spring-formation-parent</artifactId>
 		<version>1.0</version>
 	</parent>
-	<groupId>fr.insee</groupId>
 	<artifactId>formation-spring-configuration</artifactId>
-	<version>1.0</version>
 	<name>formation-spring-configuration</name>
 	<url>http://maven.apache.org</url>
-	<properties>
-		<!-- VERSIONS DES LIBRAIRIES JAR -->
-		<commons-dbcp.version>1.4</commons-dbcp.version>
-		<commons-configuration.version>1.10</commons-configuration.version>
-		<commons-lang3.version>3.7</commons-lang3.version>
-		<hibernate.version>5.2.17.Final</hibernate.version>
-		<hsqldb.version>2.4.1</hsqldb.version> <!-- InseeConfig 1.8.0.10 -->
-		<junit.version>4.12</junit.version>
-		<springframework.version>5.0.12.RELEASE</springframework.version>
-
-		<!-- PROPERTIES OBSOLETES -->
-		<!-- <commons-collections.version>3.2</commons-collections.version> -->
-		<!-- <commons-lang.version>2.5</commons-lang.version> -->
-		<!-- <commons-logging.version>1.1.1</commons-logging.version> -->
-		<!-- <ojdbc14.version>10.2.0.4</ojdbc14.version> -->
-		<!-- <servlet-api.version>2.5</servlet-api.version> -->
-	</properties>
 	<dependencies>
-		<!-- DEP. DE TEST -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>${hsqldb.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<!-- DEP. PROJET -->
 		<dependency>
 			<groupId>commons-configuration</groupId>
 			<artifactId>commons-configuration</artifactId>
-			<version>${commons-configuration.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
-			<version>${commons-dbcp.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>${commons-lang3.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>${hibernate.version}</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>slf4j-api</artifactId>
-					<groupId>org.slf4j</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<!-- PlaceHolder -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>${springframework.version}</version>
-			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-beans</artifactId>
-			<version>${springframework.version}</version>
+			<artifactId>spring-context</artifactId>
 			<scope>compile</scope>
 		</dependency>
-		<!-- Heritage InseeConfig : Plus utile maintenant -->
-		<!-- <dependency> -->
-		<!-- <groupId>commons-collections</groupId> -->
-		<!-- <artifactId>commons-collections</artifactId> -->
-		<!-- <version>${commons-collections.version}</version> -->
-		<!-- <scope>compile</scope> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>commons-lang</groupId> -->
-		<!-- <artifactId>commons-lang</artifactId> -->
-		<!-- <version>${commons-lang.version}</version> -->
-		<!-- <type>jar</type> -->
-		<!-- <scope>compile</scope> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>commons-logging</groupId> -->
-		<!-- <artifactId>commons-logging</artifactId> -->
-		<!-- <version>${commons-logging.version}</version> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>javax.servlet</groupId> -->
-		<!-- <artifactId>servlet-api</artifactId> -->
-		<!-- <version>${servlet-api.version}</version> -->
-		<!-- <scope>provided</scope> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>com.oracle</groupId> -->
-		<!-- <artifactId>ojdbc14</artifactId> -->
-		<!-- <version>${ojdbc14.version}</version> -->
-		<!-- </dependency> -->
 	</dependencies>
 </project>
