--- a/formation-spring-parent/formation-spring-web/pom.xml
+++ b/formation-spring-parent/formation-spring-web/pom.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>fr.insee</groupId>
-    <artifactId>spring-formation-parent</artifactId>
-    <version>1.0</version>
-  </parent>
-  <groupId>fr.insee</groupId>
-  <artifactId>formation-spring-web</artifactId>
-  <version>1.0</version>
-  <name>formation-spring-web</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  <dependencies>
-    <dependency>
-    	<groupId>fr.insee</groupId>
-    	<artifactId>formation-spring-core</artifactId>
-    	<version>1.0</version>
-    </dependency>
-  </dependencies>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>fr.insee</groupId>
+		<artifactId>spring-formation-parent</artifactId>
+		<version>1.0</version>
+	</parent>
+	<artifactId>formation-spring-web</artifactId>
+	<name>formation-spring-web</name>
+	<url>http://maven.apache.org</url>
+	<dependencies>
+		<dependency>
+			<groupId>fr.insee</groupId>
+			<artifactId>formation-spring-core</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
