--- a/formation-spring-parent/formation-spring-core/pom.xml
+++ b/formation-spring-parent/formation-spring-core/pom.xml
@@ -9,9 +9,7 @@
 		<artifactId>spring-formation-parent</artifactId>
 		<version>1.0</version>
 	</parent>
-	<groupId>fr.insee</groupId>
 	<artifactId>formation-spring-core</artifactId>
-	<version>1.0</version>
 	<name>formation-spring-core</name>
 	<url>http://maven.apache.org</url>
 	<properties>
@@ -28,15 +26,17 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>5.8.0</version>
-			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
-			<version>3.25.1</version>
-			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+
 	</dependencies>
 </project>
