--- a/formation-spring-parent/formation-spring-core/src/main/resources/fr/insee/config/application.properties
+++ b/formation-spring-parent/formation-spring-core/src/main/resources/fr/insee/config/application.properties
@@ -1,10 +1,7 @@
-# ************************************************************************
-# FICHIER DATABASE.PROPERTIES 
-# ************************************************************************
-# Fichier des properties de configuration du pool de connexion à la base de données.
+fr.insee.formation-spring.database.pool=cache
 
 # ------------------------------------------------------------------------
-# Paramètres de création du pool DBCP (voir documentation des composants Insee)
+# ParamÃ¨tres de crÃ©ation du pool DBCP (voir documentation des composants Insee)
 # ------------------------------------------------------------------------
 fr.insee.database.database_pool.driverClassName=org.postgresql.Driver
 
