--- a/formation-spring-parent/pom.xml
+++ b/formation-spring-parent/pom.xml
@@ -25,7 +25,7 @@
 
 		<!-- external dependencies versions -->
 		<junit.version>4.12</junit.version>
-		<springframework.version>5.0.12.RELEASE</springframework.version>
+		<springframework.version>5.3.16</springframework.version>
 		<javafaker.version>1.0.2</javafaker.version>
 		<mockito.version>5.8.0</mockito.version>
 		<assertj.version>3.25.1</assertj.version>
@@ -56,11 +56,6 @@
 				<artifactId>junit</artifactId>
 				<version>${junit.version}</version>
 				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>com.github.javafaker</groupId>
-				<artifactId>javafaker</artifactId>
-				<version>${javafaker.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.github.javafaker</groupId>
@@ -100,11 +95,6 @@
 						<groupId>org.slf4j</groupId>
 					</exclusion>
 				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.commons</groupId>
-				<artifactId>commons-lang3</artifactId>
-				<version>${commons-lang3.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-configuration</groupId>
