--- a/formation-spring-parent/formation-spring-core/pom.xml
+++ b/formation-spring-parent/formation-spring-core/pom.xml
@@ -41,5 +41,10 @@
 			<artifactId>javafaker</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
+
 	</dependencies>
 </project>
