--- a/formation-spring-parent/pom.xml
+++ b/formation-spring-parent/pom.xml
@@ -23,7 +23,7 @@
 
 		<!-- external dependencies versions -->
 		<junit.version>4.12</junit.version>
-		<springframework.version>5.0.12.RELEASE</springframework.version>
+		<springframework.version>5.3.33</springframework.version>
 		<javafaker.version>1.0.2</javafaker.version>
 		<mockito.version>5.8.0</mockito.version>
 		<assertj.version>3.25.1</assertj.version>
