--- a/formation-spring-parent/formation-spring-core/pom.xml
+++ b/formation-spring-parent/formation-spring-core/pom.xml
@@ -57,5 +57,15 @@
 			<version>1.3.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
+
 	</dependencies>
 </project>
